# Operating-Systems-BSU-Lab-2

./: CMakeLists.txt  README.md  average.cpp  average.h  main.cpp  main.h  min_max.cpp  min_max.h  structure.h  test_average.cpp  test_average.h  test_main.cpp  test_min_max.cpp  test_min_max.h
